[gd_scene load_steps=4 format=3 uid="uid://dw2shml47fr6p"]

[ext_resource type="FontFile" uid="uid://b2abx8m8v7p3f" path="res://assets/fonts/Default-Big.tres" id="1_38exc"]
[ext_resource type="Script" path="res://src/ui/sanctuary_menu.gd" id="1_k03ls"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_me0lw"]
bg_color = Color(0.402759, 0.657996, 0.602597, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.93045, 0.757758, 0.681826, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 2

[node name="SanctuaryMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -360.0
offset_right = 540.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k03ls")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.25098)

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 370.0
offset_top = 220.0
offset_right = 710.0
offset_bottom = 500.0
theme_override_styles/panel = SubResource("StyleBoxFlat_me0lw")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 4.0
offset_right = -10.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_38exc")
theme_override_font_sizes/font_size = 31
text = "Has subido de nivel!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SanctuaryLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 2.0
offset_top = 100.0
offset_right = -2.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_38exc")
theme_override_font_sizes/font_size = 31
text = "Un santuario ha aparecido!
Tienes una vida extra!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SanctuaryAndAngelLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 2.0
offset_top = 45.0
offset_right = -2.0
offset_bottom = 217.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_38exc")
theme_override_font_sizes/font_size = 31
text = "Un santuario ha aparecido!
Tienes una vida extra!
Un angel ha aparecido!
Encuentralo y hazte 
mas fuerte!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 19.845
offset_top = 220.0
offset_right = 319.845
offset_bottom = 260.0
theme_override_fonts/font = ExtResource("1_38exc")
theme_override_font_sizes/font_size = 28
text = "Continuar"

[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_exit_button_pressed"]
